tests/errors/typo_keyword.mpl
dataset:metric | fflter tag == "value"

